--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Welcome to  Ivan Mwanja's Repo!</h1>
-  
+  <p href="https://agentivan2000.github.io/CourseRegistrationSystem/">CourseRegistrationSystem</p>
 <p>Hosted with GitHub Pages.</p>
 </body>
 </html>
